agregar css a todo

--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <title>Gabriel Pascale Photography</title>
     <link  rel= "shortcut icon"  href= "../favicon.ico"  type= "image/icono-x" > 
     <link  rel= "icon"  href= "../favicon.ico"  type= "image/icono-x" >
-    <link rel="stylesheet" href="Estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 
 
 </head>
