--- a/tienda.html
+++ b/tienda.html
@@ -7,7 +7,7 @@
     <title>Gabriel Pascale Photography</title>
     <link  rel= "shortcut icon"  href= "favicon.ico"  type= "image/icono-x" > 
     <link  rel= "icon"  href= "favicon.ico"  type= "image/icono-x" >
-    <link rel="stylesheet" href="Estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 </head>
