--- a/contacto.html
+++ b/contacto.html
@@ -18,10 +18,10 @@
     <nav class="grid-item menu">
             
         <div class="container-fluid menu ul">
-            <li class="menulink"><a class="a" href="Index.html">Inicio</a></li>
-            <li class="menulink"><a class="a" href="./Sobre mi.html">Sobre Mi</a></li>
-            <li class="menulink"><a class="a" href="./Tienda.html">Tienda</a></li>
-            <li class="menulink"><a class="a" href="./Contacto.html">Contacto</a></li>
+            <li class="menulink"><a class="a" href="index.html">Inicio</a></li>
+            <li class="menulink"><a class="a" href="sobre mi.html">Sobre Mi</a></li>
+            <li class="menulink"><a class="a" href="tienda.html">Tienda</a></li>
+            <li class="menulink"><a class="a" href="contacto.html">Contacto</a></li>
         </div>
     </nav>
     
