--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     
-    <main class="main">
+    <main class="main margen padding">
         <p><h3>¡Bienvenidos! En el caso de necesitar algún tipo de información, por favor rellenar el formulario y nos pondremos en contacto lo mas próximo posible. ¡Muchas gracias!</h3></p>
 
         <form action="">
