--- a/sobre mi.html
+++ b/sobre mi.html
@@ -29,17 +29,17 @@
 
     </header>
 
-    <main>
+    <main class="flex-fotos">
 
         <div class="img">
             <img src="./Img/gp.jpg" alt=""  width="750px" height="500px">
         </div>
-        <p class="interlineado margen justificartexto footer"><h4> ¡Hola! Bienvenidos a mi webpage, mi nombre es Gabriel Pascale, un jóven de 25 años que proviene de Montevideo, Uruguay. <br>
+        <h4 class="interlineado margen justificartexto footer padding">¡Hola! Bienvenidos a mi webpage, mi nombre es Gabriel Pascale, un jóven de 25 años que proviene de Montevideo, Uruguay. <br>
             Me considero una persona amante de plasmar los momentos vividos en una fotografía. 
             Como se puede apreciar en la fotogalería, no me enfoco solamente en un estilo de fotografía, sino que me atrapan varios. <br>
             Así como me apasionan las fotografías anteriormente dedicadas en la galería, también trabajo en plasmar fotografías deportivas, 
             de la vía láctea, retratos, entre otros. <br>
-            En caso de necesitar algún tipo de muestra, por favor dirigirse a la sección Contacto.
+            En caso de necesitar algún tipo de muestra, por favor dirigirse a la sección Contacto.</h4>
     </main>
 
     <br>
