--- a/tienda.html
+++ b/tienda.html
@@ -31,7 +31,7 @@
 
     <main>
         <section>
-            <article>
+            <article class="margen padding">
                 <h1 class="letragaleria bordes"><center>Tienda</center> </h1>
                 <h2 class="bordes"><center>Cursos</center>   </h2>    
                 
